<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecallAssignment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Carinformation">Car Recall Information</string>
    <string name="CarMake">Car Make: </string>
    <string name="CarName">Car Name: </string>
    <string name="CarUnitAffected"> Number of units affected: </string>
    <string name="CarSystemType">Car System Type: </string>
    <string name="CarNotification">Car Notification Type: </string>
    <string name="CarComments">Car Comments: </string>
    <string name="CarRecallNumber">Car Recall Number: </string>
    <string name="CarCatgory">Car Category: </string>
    <string name="CarYear">Car Year: </string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="about"> My name is Pratik Udawant, this is my final project 2. My seneca ID is 024-005-100.</string>
    <string name="help_info"> This app is designed for general public, manufactures, dealerships and car repair shops. This app will provide information about the number of recalls a car’s model has in its year. It is helpful for users who are not aware of this information, as it is quite straightforward and easy to follow. In addition, manufactures, dealership and repair shops can use this app for easily knowing the number of recalls without the need of going through immense research. It also is beneficial for users as it helps to know whether it is a manufacturer defect or it’s the car itself. Hence this app, provides information that is useful not only for the general public but also for the dealerships, manufactures and repair shops as it accumulates the number of recalls on a particular car model. </string>



</resources>
